manifests/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-svc
spec:
  type: ClusterIP
  selector:
    app: pgadmin
  ports:
  - port: 80
    targetPort: 80
