manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgre-svc
spec:
  type: ClusterIP
  selector:
    app: postgresql
  ports:
  - port: 80
    targetPort: 5432
