manifests/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-myingress
  namespace: vivek

spec:
  ingressClassName: nginx
  # ingressClassName: azure-application-gateway
  rules:
  - host: pgadminui.kulphi.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pgadmin-svc
            port: 
              number: 80
